configuración en el update
